[gd_scene load_steps=9 format=2]

[ext_resource path="res://gui/stats_displayer.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/alterebro-pixel-font.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
outline_size = 1
outline_color = Color( 0.682353, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.34902, 0.94902, 0.105882, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.0117647, 0.00784314, 0.0470588, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.933333, 0.0784314, 0.0784314, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.47451, 0.0509804, 0.941176, 1 )

[node name="Stats" type="VBoxContainer"]
margin_right = 128.0
margin_bottom = 300.0
custom_constants/separation = 1
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="a" type="Label" parent="."]
visible = false
margin_right = 128.0
margin_bottom = 13.0
custom_fonts/font = SubResource( 1 )
text = "bullets on screen: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="b" type="Label" parent="."]
margin_right = 128.0
margin_bottom = 13.0
custom_fonts/font = SubResource( 1 )
text = "wave: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="c" type="Label" parent="."]
margin_top = 14.0
margin_right = 128.0
margin_bottom = 27.0
custom_fonts/font = SubResource( 1 )
text = "fps: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="d" type="Label" parent="."]
visible = false
margin_top = 42.0
margin_right = 128.0
margin_bottom = 55.0
custom_fonts/font = SubResource( 1 )
text = "time without hits: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="e" type="Label" parent="."]
visible = false
margin_top = 56.0
margin_right = 128.0
margin_bottom = 69.0
custom_fonts/font = SubResource( 2 )
text = "acc diff: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="f" type="Label" parent="."]
visible = false
margin_top = 70.0
margin_right = 128.0
margin_bottom = 83.0
custom_fonts/font = SubResource( 2 )
text = "overall diff: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="g" type="Label" parent="."]
visible = false
margin_top = 84.0
margin_right = 128.0
margin_bottom = 97.0
custom_fonts/font = SubResource( 2 )
text = "power: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="h" type="Label" parent="."]
visible = false
margin_top = 98.0
margin_right = 128.0
margin_bottom = 111.0
custom_fonts/font = SubResource( 2 )
text = "debug1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator" type="HSeparator" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_top = 28.0
margin_right = 128.0
margin_bottom = 187.0
size_flags_vertical = 3

[node name="LivesLabel" type="Label" parent="."]
margin_top = 188.0
margin_right = 128.0
margin_bottom = 201.0
custom_fonts/font = SubResource( 1 )
text = "Lives: "
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LivesBar" type="ProgressBar" parent="."]
margin_top = 202.0
margin_right = 128.0
margin_bottom = 211.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.06
custom_styles/fg = SubResource( 3 )
custom_styles/bg = SubResource( 4 )
percent_visible = false

[node name="PowerLabel" type="Label" parent="."]
margin_top = 212.0
margin_right = 128.0
margin_bottom = 225.0
custom_fonts/font = SubResource( 1 )
text = "Power: "
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PowerBar" type="ProgressBar" parent="."]
margin_top = 226.0
margin_right = 128.0
margin_bottom = 236.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.06
custom_styles/fg = SubResource( 5 )
custom_styles/bg = SubResource( 4 )
percent_visible = false

[node name="BombsLabel" type="Label" parent="."]
margin_top = 237.0
margin_right = 128.0
margin_bottom = 250.0
custom_fonts/font = SubResource( 1 )
text = "Bombs: "
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BombsBar" type="ProgressBar" parent="."]
margin_top = 251.0
margin_right = 128.0
margin_bottom = 260.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.06
custom_styles/fg = SubResource( 6 )
custom_styles/bg = SubResource( 4 )
percent_visible = false

[node name="HSeparator2" type="HSeparator" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_top = 261.0
margin_right = 128.0
margin_bottom = 300.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.24
